Fixed wrong color for slider controls

--- a/frontend/scss/_slider.scss
+++ b/frontend/scss/_slider.scss
@@ -23,7 +23,7 @@
 				line-height: 0;
 				font-size: 0;
 				border-top: 1px solid;
-				border-color: color(chra)c;
+				border-color: color(chrac);
 				
 				&.active
 				{
